stack/nacos/nacos-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nacos-ing
  namespace: nacos
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nacos.supos.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nacos-headless
          servicePort: 8848
